pkl-core/src/test/files/LanguageSnippetTests/input/errors/reference22.pkl
import "pkl:ref"

typealias Ref<T> = ref.Reference<ref.Domain, T>
typealias Ref2<T> = Ref<T(isEmpty)>

foo: Ref2<String>
